--- a/frontend/src/style/components/basic-menu.scss
+++ b/frontend/src/style/components/basic-menu.scss
@@ -81,19 +81,27 @@
   @include mobile {
     display: flex;
   }
-  & ul {
-    list-style: none;
-  }
 }
 
 .nav-ul-mobile {
   position: absolute;
+  z-index: 9999;
   right: 1rem;
-  background: $primary;
-  padding: 1rem 0.8rem;
+  background: $secondary;
+  border-radius: 0.5rem;
+  box-shadow: 0px 0px 28px -3px #000000;
+  animation: appear 0.2s ease-in-out;
 }
 
 .nav-header-mobile {
   display: flex;
   align-items: center;
+}
+
+.nav-li-mobile {
+  list-style: none;
+
+  & a {
+    text-decoration: none;
+  }
 }
