--- a/frontend/src/style/components/modal.scss
+++ b/frontend/src/style/components/modal.scss
@@ -15,6 +15,7 @@
 .modal-default {
   &.container {
     height: auto;
+    width: 80%;
     display: block;
     justify-content: center;
     background-color: white;
