--- a/frontend/src/style/components/basic-menu.scss
+++ b/frontend/src/style/components/basic-menu.scss
@@ -85,23 +85,58 @@
 
 .nav-ul-mobile {
   position: absolute;
+  width: auto;
   z-index: 9999;
   right: 1rem;
   background: $secondary;
   border-radius: 0.5rem;
   box-shadow: 0px 0px 28px -3px #000000;
   animation: appear 0.2s ease-in-out;
+  padding: 0rem;
 }
 
 .nav-header-mobile {
-  display: flex;
-  align-items: center;
+  list-style: none;
+  padding: 0.5rem;
+  text-align: center;
+  background-color: $primary;
+  border-radius: 0.5rem 0.5rem 0 0;
+  
+  & > div {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+    & > h2 {
+      margin: 0;
+    }
+  }
+
+  & > img {
+    border: none;
+    border-radius: 50%;
+    padding: 0.2rem;
+    margin: 2rem 2rem 0;
+  }
 }
 
 .nav-li-mobile {
   list-style: none;
+  padding: 0.5rem 2rem;
+  color: $text-general;
+  transition: ease-in-out 0.1s;
+
+  &:hover {
+    background-color: $primary;
+    color: $text-general-hover;
+  }
 
   & a {
     text-decoration: none;
+
+    &:visited {
+      color: $text-general;
+    }
   }
 }
