💄 import : new scss files

--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -40,6 +40,9 @@ body {
 @import "components/modal";
 @import "components/scrollbar";
 @import "components/language-switch";
+@import "components/form-item";
+@import "components/input";
+@import "components/section-content";
 
 // Importer les animations
 @import "animations/glitch";
