--- a/frontend/src/style/animations/glitch.scss
+++ b/frontend/src/style/animations/glitch.scss
@@ -1,7 +1,8 @@
 .wrapper {
   text-align: center;
   padding: 1rem;
-  width: 100%;
+  width: 80%;
+  margin: 0 auto
 }
 
 @mixin glitchCopy {
@@ -43,6 +44,7 @@
 
 @keyframes glitch-anim {
   $steps: 20;
+
   @for $i from 0 through $steps {
     #{percentage($i * calc(1/$steps))} {
       clip: rect(random(100) + px, 9999px, random(100) + px, 0);
@@ -53,6 +55,7 @@
 
 @keyframes glitch-anim2 {
   $steps: 20;
+
   @for $i from 0 through $steps {
     #{percentage($i * calc(1/$steps))} {
       clip: rect(random(100) + px, 9999px, random(100) + px, 0);
@@ -63,6 +66,7 @@
 
 @keyframes glitch-skew {
   $steps: 10;
+
   @for $i from 0 through $steps {
     #{percentage($i * calc(1/$steps))} {
       transform: skew(calc(random(10) - 5) + deg);
