--- a/frontend/src/style/components/basic-menu.scss
+++ b/frontend/src/style/components/basic-menu.scss
@@ -1,5 +1,6 @@
 .nav-header-basic {
   position: fixed;
+  z-index: 9999;
   min-width: 300px;
   -webkit-box-shadow: 0px 9px 18px 0px rgba(0, 0, 0, 0.39);
   box-shadow: 0px 9px 18px 0px rgba(0, 0, 0, 0.39);
@@ -12,6 +13,9 @@
 .nav-basic {
   display: flex;
   align-items: center;
+  width: 100%;
+  height: 2rem; // nav bar height settings
+
   @include mobile {
     justify-content: space-between;
   }
@@ -20,6 +24,7 @@
 .nav-home-link {
   color: $icon-home;
   transition: ease-in-out 0.5s;
+
   &:hover {
     color: $icon-home-hover;
   }
@@ -35,7 +40,8 @@
 
   & li {
     text-align: center;
-    & > .nav-link {
+
+    &>.nav-link {
       color: $text-btn-basic;
       background-color: $btn-basic;
       width: 100%;
@@ -62,7 +68,7 @@
       transform: scale(1.1, 1.2);
     }
 
-    & > .nav-link:visited {
+    &>.nav-link:visited {
       color: inherit;
     }
   }
@@ -70,6 +76,7 @@
 
 .nav-children {
   display: flex;
+
   @include mobile {
     display: none;
   }
@@ -78,6 +85,7 @@
 // mobile menu
 .nav-basic-mobile {
   display: none;
+
   @include mobile {
     display: flex;
   }
@@ -101,19 +109,19 @@
   text-align: center;
   background-color: $primary;
   border-radius: 0.5rem 0.5rem 0 0;
-  
-  & > div {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
 
-    & > h2 {
+  &>div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &>h2 {
       margin: 0;
     }
   }
 
-  & > img {
+  &>img {
     border: none;
     border-radius: 50%;
     padding: 0.2rem;
@@ -138,5 +146,14 @@
     &:visited {
       color: $text-general;
     }
+  }
+}
+
+.feather.feather-user {
+  background-color: $tertiary;
+  stroke: red;
+
+  &:hover {
+    background-color: $tertiary;
   }
 }
