--- a/frontend/src/style/components/basic-menu-layer.scss
+++ b/frontend/src/style/components/basic-menu-layer.scss
@@ -4,12 +4,15 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  padding: 5rem 0 0 0;
   flex-direction: column;
-
+  min-height: calc(100vh - 2rem);
+  
   & main {
+    margin-top: 3rem;
     flex: 1;
     width: 100%;
+    height: 100%;
+    display: flex;
   }
 
   & footer {
