--- a/frontend/src/style/components/basic-menu.scss
+++ b/frontend/src/style/components/basic-menu.scss
@@ -2,8 +2,8 @@
   position: fixed;
   z-index: 9999;
   min-width: 300px;
-  -webkit-box-shadow: 0px 9px 18px 0px rgba(0, 0, 0, 0.39);
-  box-shadow: 0px 9px 18px 0px rgba(0, 0, 0, 0.39);
+  -webkit-box-shadow: 0px 9px 18px 0px rgba(0, 0, 0, 0.11);
+  box-shadow: 0px 9px 18px 0px rgba(0, 0, 0, 0.11);
   background-color: $secondary;
   top: 0;
   left: 0;
@@ -11,10 +11,10 @@
 }
 
 .nav-basic {
+  height: 2.5rem; // nav bar height settings
   display: flex;
   align-items: center;
   width: 100%;
-  height: 2rem; // nav bar height settings
 
   @include mobile {
     justify-content: space-between;
@@ -107,7 +107,6 @@
   list-style: none;
   padding: 0.5rem;
   text-align: center;
-  background-color: $primary;
   border-radius: 0.5rem 0.5rem 0 0;
 
   &>div {
@@ -149,11 +148,71 @@
   }
 }
 
-.feather.feather-user {
+.user_svg__feather.user_svg__feather-user {
+  fill: $primary;
+  stroke: $primary;
+  border: solid $tertiary 0.1rem;
+  padding: 0.2rem;
   background-color: $tertiary;
-  stroke: red;
+  border-radius: 50%;
 
   &:hover {
     background-color: $tertiary;
   }
+}
+
+#user-profile-link {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  gap: 0.8rem;
+  text-decoration: none;
+  font-weight: 800;
+  text-transform: uppercase;
+  padding: 0.2rem;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  &:visited {
+    color: $text-general;
+  }
+
+  @include mobile {
+    display: none;
+  }
+  
+  @include tablet {
+    display: none;
+  }
+}
+
+#nav-home-link-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  margin-right: 0.2rem;
+  text-decoration: none;
+  transition: ease-in-out 0.4s;
+  
+  & > #title-home-link {
+      font-family: "Maizen", sans-serif;
+      transition: ease-in-out 0.4s;
+      padding: 0.5rem 0.5rem;
+      border: 0.15rem solid $secondary;
+      border-radius: 0.2rem;
+      border-style: outset;
+      min-width: 100px;
+      text-align: center;
+
+        &:hover {
+          border-color: $btn-link-border-hover;
+        }
+        
+        @include tablet {
+          font-size: 0.8rem;
+        }
+    }
 }
