--- a/frontend/src/style/components/section-content.scss
+++ b/frontend/src/style/components/section-content.scss
@@ -5,19 +5,18 @@ section.section-content {
     align-items: center;
     padding: 2rem;
     flex-direction: column;
+    width: 100%;
 
     &.full-screen {
         background-color: $dark;
         position: fixed;
+        padding: 0;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
         z-index: 10000;
-        height: 100%;
     }
-
-
 
 }
 
