--- a/frontend/src/style/themes/basicTheme.scss
+++ b/frontend/src/style/themes/basicTheme.scss
@@ -1,11 +1,11 @@
 // Variables
-$primary: #cfd6dc;
-$secondary: #dbe0e3;
+$primary: #efefef;
+$secondary: #ffffff;
 $tertiary: #52616e;
 $primary-border: #ebf5fd;
 $secondary-border: #63696e;
 $tertiary-border: #63696e;
-$dark: #282b2c;
+$dark: #e0e0e0;
 
 //buttons
 // basics
@@ -32,7 +32,7 @@ $btn-link-border-hover: #2e3031;
 $btn-borderless: #cfd6dc;
 $btn-borderless-hover: #797d81;
 // circles
-$btn-circle-hover: #626364;
+$btn-circle-hover: #a4a4a4;
 
 //text-color
 $text-general: #232121;
@@ -43,6 +43,7 @@ $text-btn-submit: #171718;
 $text-btn-submit-hover: #c9d3da;
 $text-link-visited: #0f41af;
 $text-danger: #de3518;
+$text-light: #ffffff;
 
 //separator-color
 $separator-color: #63696e;
@@ -67,6 +68,16 @@ $tablet: 768px;
 $desktop: 1024px;
 
 //glitchs
-$glitch-text: #fff;
-$glitch-text-shadow: #ff00c1;
-$glitch-text-copy: #00fff9;
+$glitch-text: #343434;
+$glitch-text-shadow: #17bee7;
+$glitch-text-copy: #98ff23;
+
+//game colors assets
+$game-card: #e5e5e5;
+$game-card-eye: #cbcbcb;
+$game-card-selected: #93c7d0;
+$game-card-eye-selected: #93c7d0;
+$game-card-eye-selected-border: #2dffed;
+
+// loader
+$loader-basic: #17464b;
