--- a/frontend/src/style/components/basic-menu.scss
+++ b/frontend/src/style/components/basic-menu.scss
@@ -41,7 +41,7 @@
   & li {
     text-align: center;
 
-    &>.nav-link {
+    & > .nav-link {
       color: $text-btn-basic;
       background-color: $btn-basic;
       width: 100%;
@@ -68,7 +68,7 @@
       transform: scale(1.1, 1.2);
     }
 
-    &>.nav-link:visited {
+    & > .nav-link:visited {
       color: inherit;
     }
   }
@@ -101,6 +101,11 @@
   box-shadow: 0px 0px 28px -3px #000000;
   animation: appear 0.2s ease-in-out;
   padding: 0rem;
+
+  & > button.btn-borderless.danger {
+    margin: auto;
+    cursor: pointer;
+  }
 }
 
 .nav-header-mobile {
@@ -109,18 +114,18 @@
   text-align: center;
   border-radius: 0.5rem 0.5rem 0 0;
 
-  &>div {
+  & > div {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    &>h2 {
+    & > h2 {
       margin: 0;
     }
   }
 
-  &>img {
+  & > img {
     border: none;
     border-radius: 50%;
     padding: 0.2rem;
@@ -182,7 +187,7 @@
   @include mobile {
     display: none;
   }
-  
+
   @include tablet {
     display: none;
   }
@@ -196,23 +201,23 @@
   margin-right: 0.2rem;
   text-decoration: none;
   transition: ease-in-out 0.4s;
-  
-  & > #title-home-link {
-      font-family: "Maizen", sans-serif;
-      transition: ease-in-out 0.4s;
-      padding: 0.5rem 0.5rem;
-      border: 0.15rem solid $secondary;
-      border-radius: 0.2rem;
-      border-style: outset;
-      min-width: 100px;
-      text-align: center;
 
-        &:hover {
-          border-color: $btn-link-border-hover;
-        }
-        
-        @include tablet {
-          font-size: 0.8rem;
-        }
+  & > #title-home-link {
+    font-family: "Maizen", sans-serif;
+    transition: ease-in-out 0.4s;
+    padding: 0.5rem 0.5rem;
+    border: 0.15rem solid $secondary;
+    border-radius: 0.2rem;
+    border-style: outset;
+    min-width: 100px;
+    text-align: center;
+
+    &:hover {
+      border-color: $btn-link-border-hover;
     }
+
+    @include tablet {
+      font-size: 0.8rem;
+    }
+  }
 }
