--- a/frontend/src/style/components/form-item.scss
+++ b/frontend/src/style/components/form-item.scss
@@ -3,35 +3,34 @@
     background-color: $form-background;
     padding: 1rem 2rem;
     display: flex;
-    gap: 1rem;
+    gap: 0.2em;
     flex-flow: column;
     z-index: 0;
 
-    &>label.hidden {
+    & > label.hidden {
         display: none;
     }
 
-    &>input {
+    & > input {
         background-color: $form-input;
         font-size: 1rem;
         height: 1.8rem;
         padding: 0.2rem 0.5rem;
         border-radius: 0.3rem;
-        border: solid 0.2rem $form-border;
+        border: solid 0.1rem $form-border;
 
         &:invalid {
             border-color: $text-danger;
             animation: wizz 0.5s ease-in-out;
-
         }
     }
 
-    &>span.input-message {
+    & > span.input-message {
         position: absolute;
         width: max-content;
         padding: 1rem 2rem;
         border-radius: 0.3rem;
-        
+
         &.error {
             z-index: 50;
             background-color: aliceblue;
