--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -1,28 +1,40 @@
-// Importer les variables de theme
+// Import des themes
 @import "themes/basicTheme";
 
 //Import des fonts
 @import "fonts/fonts";
 
-//Importer keyFrames
+//Import keyFrames
 @import "animations/movements";
 @import "animations/loaders";
 @import "animations/transitions";
 
 .hidden {
+  //  TO DO : keyword for basique style
   display: none;
 }
 
-html,
+html,  // reset du style
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 20px;
+  font-size: 16px;
   font-family: "Monitorica", sans-serif;
+  min-width: 480px;
 }
 
-/* Mixin Responsive */
+table {
+  border-collapse: collapse;
+}
+
+td,
+th {
+  padding: 0;
+  border: 1px solid #ccc;
+}
+
+/* Mixin */
 @mixin mobile {
   @media only screen and (max-width: #{$mobile}) {
     @content;
@@ -57,6 +69,11 @@ body {
 @import "components/loader-spin";
 @import "components/countdown";
 @import "components/footer";
+@import "components/notifications";
+@import "components/game-menu";
+@import "components/combo-bar";
+@import "components/select";
+@import "components/datatable";
 
 // Importer les animations
 @import "animations/glitch";
@@ -65,3 +82,9 @@ body {
 @import "pages/calibrate";
 @import "pages/home";
 @import "pages/game";
+@import "pages/login";
+@import "pages/register";
+@import "pages/profile";
+@import "pages/lobby";
+@import "pages/game-zone";
+@import "pages/ranking";
