--- a/frontend/src/style/animations/movements.scss
+++ b/frontend/src/style/animations/movements.scss
@@ -16,7 +16,7 @@
     transform: translateX(50px);
   }
 
-  25% {
+  15% {
     opacity: 1;
     transform: translateX(0);
   }
@@ -29,6 +29,17 @@
   100% {
     opacity: 0;
     transform: translateX(50px);
+  }
+}
+
+@keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
@@ -86,14 +97,13 @@
 @keyframes shockwave {
   0% {
     transform: scale(1);
-    box-shadow: 0 0 2px rgba(0,0,0,0.15), inset 0 0 1px rgba(0,0,0,0.15);
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.15), inset 0 0 1px rgba(0, 0, 0, 0.15);
   }
   95% {
-    box-shadow: 0 0 50px rgba(0,0,0,0), inset 0 0 30px rgba(0,0,0,0);
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0), inset 0 0 30px rgba(0, 0, 0, 0);
   }
   100% {
     transform: scale(2.25);
-
   }
 }
 
@@ -105,7 +115,7 @@
     transform: scale(1.08);
   }
   50% {
-     transform: scale(0.98);
+    transform: scale(0.98);
   }
   55% {
     transform: scale(1.02);
