--- a/frontend/src/style/pages/game.scss
+++ b/frontend/src/style/pages/game.scss
@@ -6,19 +6,22 @@ section.ninja.section-content.game {
     background-color: #fcfcfc;
     transition: ease-in-out 0.5s;
     overflow: hidden;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%237fdbca' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background: center / cover no-repeat url("../../../src/style/assets/background/background_template_hexa_00.png");
+    filter: drop-shadow(10px 10px 5px #44c6dd);
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #fcfcfc;
-      background: radial-gradient(circle, rgba(252, 252, 252, 1) 20%, rgba(185, 221, 229, 0.6811099439775911) 50%);
-      z-index: 1;
-      animation: backgroundPulsing 10s infinite linear;
+    & > div.wrapper {
+      animation: fadeIn 2s linear;
+
+      & > h1 {
+        transition: ease-in-out 0.5s;
+        font-size: 4rem;
+        @include tablet {
+          font-size: 2rem;
+        }
+        @include mobile {
+          font-size: 1.5rem;
+        }
+      }
     }
   }
 
@@ -29,9 +32,39 @@ section.ninja.section-content.game {
     padding: 0;
     gap: 1rem;
     flex-flow: column nowrap;
+    list-style: none;
 
     & > li {
+      opacity: 0;
       margin: auto;
+      animation: fadeDown 0.5s ease-out forwards;
+
+      &:nth-child(1) {
+        animation-delay: 0.5s;
+      }
+
+      &:nth-child(2) {
+        animation-delay: 1s;
+      }
+
+      &:nth-child(3) {
+        animation-delay: 1.5s;
+      }
+
+      &:nth-child(4) {
+        animation-delay: 2s;
+      }
+
+      & > button {
+        background-color: #fcfcfc;
+        font-size: 1.2rem;
+        @include tablet {
+          font-size: 1rem;
+        }
+        @include mobile {
+          font-size: 0.8rem;
+        }
+      }
     }
   }
 }
