--- a/frontend/src/style/pages/home.scss
+++ b/frontend/src/style/pages/home.scss
@@ -1,25 +1,81 @@
 section.ninja.section-content.home {
-    min-height: 80vh;
+  min-height: 80vh;
+  height: auto;
 
-    &.hive {
-        position: relative;
-        background-color: #fcfcfc;
-        transition: ease-in-out 0.5s;
-        overflow: hidden;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%237fdbca' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-        
-        &::before {
-          content: "";
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: #fcfcfc; 
-          background: radial-gradient(circle, rgba(252,252,252,1) 20%, rgba(185,221,229,0.6811099439775911) 50%);
-          z-index: 1;
-          animation: backgroundPulsing 10s infinite linear;
-        }
-  
+  &.hive {
+    position: relative;
+    background-color: #fcfcfc;
+    transition: ease-in-out 0.5s;
+    overflow: hidden;
+    background: center / cover no-repeat url("../../../src/style/assets/background/background_template_hexa_00.png");
+    filter: drop-shadow(10px 10px 5px #44c6dd);
+    animation: backgroundAppear 8s linear infinite;
+
+    & > .wrapper > h1 {
+      transition: ease-in-out 0.5s;
+      font-size: 4rem;
+      @include tablet {
+        font-size: 2rem;
       }
+      @include mobile {
+        font-size: 1.5rem;
+      }
+    }
+    & > .wrapper > p {
+      transition: ease-in-out 0.5s;
+      font-size: 2rem;
+      @include tablet {
+        font-size: 1rem;
+      }
+      @include mobile {
+        font-size: 0.5rem;
+      }
+    }
+
+    & > button {
+      background-color: #fcfcfc;
+      font-size: 1.2rem;
+      @include tablet {
+        font-size: 1rem;
+      }
+      @include mobile {
+        font-size: 0.8rem;
+      }
+    }
+
+    & > div.modal-default-background {
+      position: fixed;
+      top: 0;
+
+      & > #ninja-modal-home {
+        transition: ease-in-out 0.5s;
+        width: 50%;
+        font-size: 1rem;
+
+        @include tablet {
+          width: 80%;
+          font-size: 0.8rem;
+        }
+        @include mobile {
+          width: 90%;
+          font-size: 0.5rem;
+        }
+
+        & > div.body {
+          height: 20rem;
+          overflow-y: scroll;
+          & > article > h1 {
+            color: $text-danger;
+            font-size: 2rem;
+            @include tablet {
+              font-size: 2rem;
+            }
+            @include mobile {
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+    }
   }
+}
