--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -21,17 +21,24 @@ body {
   box-sizing: border-box;
   font-size: 16px;
   font-family: "Monitorica", sans-serif;
-  min-width: 480px;
-}
+  width: 100%;
+  height: 100%;
+  min-width: 320px;
 
-table {
-  border-collapse: collapse;
-}
+  & div#root {
+    height: 100%;
+    width: 100%;
+  }
 
-td,
-th {
-  padding: 0;
-  border: 1px solid #ccc;
+  & table {
+    border-collapse: collapse;
+  }
+
+  & td,
+  th {
+    padding: 0;
+    border: 1px solid #ccc;
+  }
 }
 
 /* Mixin */
@@ -88,3 +95,4 @@ th {
 @import "pages/lobby";
 @import "pages/game-zone";
 @import "pages/ranking";
+@import "pages/not-found";
