--- a/frontend/src/style/components/button.scss
+++ b/frontend/src/style/components/button.scss
@@ -63,7 +63,11 @@
   padding: 0.2rem;
   border: none;
   border-radius: 50%;
-  height: auto;
+  height: 2rem;
+  width: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:hover {
     transition: ease-in-out 0.2s;
