--- a/frontend/src/style/components/datatable.scss
+++ b/frontend/src/style/components/datatable.scss
@@ -6,12 +6,24 @@ div.ninja.datatable {
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
+    transition: ease-in-out 0.5s;
     height: auto;
-    margin-bottom: 10rem;
+    align-items: center;
+    margin-bottom: 5rem;
     background-color: #fcfcfc;
+    max-width: 100vw;
+    width: 49rem;
+
+    @include tablet {
+        width: 80%;
+    }
+    @include mobile {
+        width: 100%;
+    }
 
     & > table.ninja.table-container {
-        min-width: 49.5rem;
+        overflow-x: auto;
+        width: 100%;
         background-color: #cccccc;
         overflow-y: scroll;
         scroll-behavior: smooth;
@@ -26,6 +38,11 @@ div.ninja.datatable {
             & > th {
                 padding: 1rem 1.2rem;
                 font-size: 1.2rem;
+
+                @include mobile {
+                    padding: 0.8rem;
+                    font-size: 0.8rem;
+                }
             }
         }
 
@@ -36,6 +53,10 @@ div.ninja.datatable {
                     height: 2rem;
                     padding: 1rem 1.2rem;
                     font-size: 1.1rem;
+                    @include mobile {
+                        padding: 0.5rem;
+                        font-size: 0.7rem;
+                    }
                 }
 
                 &.loading-infinite {
@@ -67,6 +88,10 @@ div.ninja.datatable {
         padding: 2rem 1rem;
         border-radius: 0.8rem;
         box-shadow: 0px -8px 5px 0px #0000003f;
+
+        @include mobile {
+            font-size: 0.5rem;
+        }
 
         & > .pagination-basic-numerotation {
             transition: ease-in-out 0.5s;
