🐛 fix font import on refresh

--- a/frontend/src/style/fonts/fonts.scss
+++ b/frontend/src/style/fonts/fonts.scss
@@ -1,9 +1,9 @@
 /* Import de la police */
 @font-face {
-    font-family: 'Monitorica'; 
-    src: url('src/style/fonts/monitorica.ttf');
-  }
+  font-family: "Monitorica";
+  src: url("/src/style/fonts/monitorica.ttf");
+}
 @font-face {
-    font-family: 'Maizen'; 
-    src: url('src/style/fonts/super-maizen.ttf');
-  }
+  font-family: "Maizen";
+  src: url("/src/style/fonts/super-maizen.ttf");
+}
